Fix section alignment
Center sections on web view.

--- a/src/index.css
+++ b/src/index.css
@@ -119,10 +119,6 @@
 
 /* Custom utility classes */
 @layer utilities {
-  .pl-84 {
-    padding-left: 21rem;
-  }
-  
   .hover-scale {
     @apply transition-transform duration-200 hover:scale-105;
   }
